[package]
name = "merklegcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
merkletree = {path = "../merkletree"}
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.10.0"
futures-timer = "3.0.3"
futures-util = "0.3.32"
object_store = { version = "0.13.2", features = ["gcp"] }
hex = "0.4.3"
gix = { version = "0.81.0", features = ["blocking-http-transport-curl", "blocking-network-client"] }
