[package]
name = "merklecli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["http2"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
merkletree = {path = "../merkletree"}
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
walkdir = "2.5.0"
rand = "0.10.0"
futures-timer = "3.0.3"
object_store = { version = "0.13.2", features = ["gcp"] }
futures-util = "0.3.32"
