[package]
name = "merkletree"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22.1"
walkdir = "2.5.0"
futures = "0.3.31"
futures-time = "3.0.1"
rand = "0.10.0"
